--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,6 @@
 #text { border: 1px solid black; width: 318px; height: 58px; }
 #box { border: 1px solid black; width: 318px; height: 318px; }
 #buttons { border: 1px solid black; width: 318px; height: 58px; }
+.chessboard { border: 1px solid black; width: 240px; height: 240px;
+    margin-left: auto; margin-right: auto; margin-top: 10px; }
+.field { border: 1px solid black; width: 28px; height: 28px; float: left; }
