edycja zdjecia gry
Dodane pola: startowe, koncowe, z pionkiem i te, na ktore pionek moze
stanac. Tymczasem takie zostanie "zdjecie" gry pojawiajace sie po
wybraniu gry z menu glownego.

--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,7 @@
 .chessboard { border: 1px solid black; width: 240px; height: 240px;
     margin-left: auto; margin-right: auto; margin-top: 10px; }
 .field { border: 1px solid black; width: 28px; height: 28px; float: left; }
+.field0 { background-color: green }
+.field28, .field34, .field35, .field36 { background-color: #adff2f }
+.field63 { background-color: red }
+.pawn { background-color: black; width: 20px; height: 20px; margin: 4px; border-radius: 10px; }
