--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,11 @@
 #box { border: 1px solid black; width: 318px; height: 318px; }
 #buttons { border: 1px solid black; width: 318px; height: 58px; }
 .chessboard { border: 1px solid black; width: 240px; height: 240px;
-    margin-left: auto; margin-right: auto; margin-top: 10px; }
+    margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 10px; }
 .field { border: 1px solid black; width: 28px; height: 28px; float: left; }
 .field0 { background-color: green }
 .field28, .field34, .field35, .field36 { background-color: #adff2f }
 .field63 { background-color: red }
 .pawn { background-color: black; width: 20px; height: 20px; margin: 4px; border-radius: 10px; }
+#introback { float: left; }
+#intronext { float: right; }
