--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,12 @@
 #box { border: 1px solid black; width: 318px; height: 318px; }
 #buttons { border: 1px solid black; width: 318px; height: 58px; }
 .chessboard { border: 1px solid black; width: 240px; height: 240px;
-    margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 10px; }
+    margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 10px; position: relative; }
 .field { border: 1px solid black; width: 28px; height: 28px; float: left; }
 .starting { background-color: green }
 .possible { background-color: #adff2f }
 .winning { background-color: red }
-.pawn { background-color: black; width: 20px; height: 20px; margin: 4px; border-radius: 10px; }
+.pawn { background-color: black; width: 20px; height: 20px; margin: 4px; border-radius: 10px; position: relative; }
 #introback { float: left; }
 #intronext { float: right; }
 #backmenu { float: left; }
