plansza z wynikami - szkielet
Dodany szkielet funkcji 'gameResultsLayout', ktora bedzie w przyszlosci
wyswietlac i komentowac wyniki, a nastepnie (opcjonalnie) pokazywac
strategie wygrywajaca.

--- a/css/main.css
+++ b/css/main.css
@@ -16,5 +16,6 @@
 #intronext { float: right; }
 #backmenu { float: left; }
 #backintro { float: left; }
+#backgame { float: left; }
 #finish { float: right; }
 #game { margin-top: 35px; }
